src/test/compile-fail/infinite-vec-type-recursion.rs
// -*- rust -*-

// error-pattern: Infinite type recursion

type x = vec[x];

fn main() {
  let x b = vec();
}
